[package]
edition = "2018"
license = "Apache-2.0"
name = "russh-napi"
repository = "https://github.com/warp-tech/russh"
version = "0.1.0"
rust-version = "1.73"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
napi = { version = "3.0.0-alpha", features = ["async"] }
napi-derive = "3.0.0-alpha"
tokio = { version = "1.17.0", features = ["macros", "process"] }
russh = { version = "0.50.0-beta.11" }
# russh = { version = "0.50.0-beta.11", path = "../russh/russh" }
pageant = { version = "0.0.2" }
async-trait = "0.1"
futures = "0.3"
thiserror = "1.0"
delegate = "0.12.0"
russh-sftp = "2.0.2"
env_logger = "0.10.2"
tokio-socks = "0.5.2"
async-http-proxy = { version = "1.2.5", features = ["runtime-tokio"] }

[build-dependencies]
napi-build = "1"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
